<resources>
    <string name="app_name">मेरो सिम</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mero Sim Utility App</string>
    <string name="nav_header_subtitle">chiran604@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="info_txt">Info</string>
    <string name="menu_home">Home</string>
    <string name="menu_recharge">Recharge</string>
    <string name="menu_settings">Settings</string>
    <string name="nav_ntc_detail" translatable="false">Namaste</string>
    <string name="nav_ncell_detail" translatable="false">Ncell</string>
    <string name="nav_smart_detail" translatable="false">SmartCell</string>
    <string name="sim_name_namaste">Namaste</string>
    <string name="sim_name_ncell">Ncell</string>
    <string name="sim_name_smart">SmartCell</string>
    <string name="perm_dialog_title">Permission not granted!</string>
    <string name="perm_read_phone_state_msg">Read phone state permission is needed to find out the information about the sim cards inserted in the device.</string>
    <string name="positive_dialog_btn_txt">OK</string>
    <string name="negative_dialog_btn_txt">Cancel</string>
    <string name="permission_granted_txt">Permission has been granted successfully. You can use the feature now without a hiccup.</string>
    <string name="permission_not_granted_txt">These permissions are required in order to enhance the functionality of this app.</string>
    <string name="perm_camera_msg">Camera permission is needed to scan the recharge cards. </string>
    <string name="perm_call_phone_msg">Call phone permission is needed to send the ussd request in background.</string>
    <string name="perm_read_contacts_msg">Read contacts permission is needed to find a phone number from your contact list.</string>
    <string name="perm_send_sms_msg">Send sms permission is needed to send sms to activate/deactivate services.</string>
    <string name="permission_denied_txt">Required permissions are not granted</string>
    <string name="no_sim_text">Sim card is not inserted!</string>
    <string name="next_button_text">Continue</string>
    <string name="recharge_button_text">Recharge</string>
    <string name="choose_carrier_text">Choose the carrier</string>
    <string name="empty_sim_text">(None)</string>
    <string name="scan_pin_text">Scan the pin</string>
    <string name="img_btn_toggle_flash_content_desc">It is used to toggle flash.</string>
    <string name="btn_toggle_flash_on">Turn flash On</string>
    <string name="btn_toggle_flash_off">Turn flash Off</string>
    <string name="btn_retry_text">Retry</string>
    <string name="tv_scanned_pin">Pin scanned : %1$s</string>
    <string name="empty_pin_text">(Empty)</string>
    <string name="no_flash_text">Sorry, flash is not available in your device</string>
    <string name="tap_to_preview_text">Tap the preview to focus on the pin!</string>
    <string name="btn_next_text">Recharge</string>
    <string name="confirm_details_text">Confirm the details</string>
    <string name="tv_confirm_sim">Carrier : %1$s</string>
    <string name="tv_confirm_pin">Pin</string>
    <string name="edtTxt_scanned_pin_num_hint">Scanned pin number</string>
    <string name="wrong_scanning_text">Edit the pin in case if it is wrong</string>
    <string name="accessibility_service_description">It is used to intercept the ussd response dialog to get the response text for sophisticated response display. It is absolutely safe to use.</string>
    <string name="key_language" translatable="false">key_language</string>
    <string name="language_pref_title">Chosen language</string>
    <string name="language_summary_on">Nepali</string>
    <string name="language_summary_off">English</string>
    <string name="key_vibrate" translatable="false">key_vibrate</string>
    <string name="vibrate_pref_title">Vibrate when pin is detected</string>
    <string name="vibrate_summary_on">On</string>
    <string name="vibrate_summary_off">Off</string>
    <string name="key_overlay" translatable="false">key_overlay</string>
    <string name="overlay_pref_title" translatable="false">Overlay</string>
    <string name="overlay_summary_on" translatable="false">Use overlay whenever possible</string>
    <string name="overlay_summary_off" translatable="false">Do not use overlay</string>
    <string name="tv_available_sim_txt">Your Sim Card/s</string>
    <string name="tv_fetching_sim_details_txt">Fetching sim card\'s details</string>
    <string name="tv_no_sim_txt">No any sim cards detected. Please ensure that sim cards are inserted properly.</string>
    <string name="phone_txt">Phone: %s</string>
    <string name="balance_txt">Balance: %s</string>
    <string name="sim_owner_txt">Sim Owner: %s</string>
    <string name="customer_care_txt">Customer Care: %s</string>
    <string name="balance_transfer_snack_msg">Refresh the balance now to retrieve your new balance!</string>
    <string name="ussd_failed_snack_msg">Ussd request has failed to receive any response! Please try again some minutes later!</string>
    <string name="ussd_response_cancelled_msg">Ussd request was cancelled!</string>
    <string name="btn_subscribe_txt">Subscribe</string>
    <string name="btn_unsubscribe_txt">Unsubscribe</string>
    <string name="tv_mca_txt">Missed Call Alert(MCA)</string>
    <string name="btn_transfer">Transfer</string>
    <string name="btn_status_txt">Status</string>
    <string name="btn_start_txt">Start</string>
    <string name="btn_stop_txt">Stop</string>
    <string name="btn_activate_txt">Activate</string>
    <string name="btn_deactivate_txt">Deactivate</string>
    <string name="ntc_balance_transfer_info">&lt;b&gt;ABOUT BALANCE TRANSFER&lt;/b&gt;
       &lt;ul&gt;
	        &lt;li&gt;You need to know your security code to transfer your balance.To find the security code, type \"scode\" and send sms to 1415.You should get security code in message reply shortly.&lt;/li&gt;
	        &lt;li&gt;You can transfer balance from Rs. 10 up to Rs. 500 only per transfer.&lt;/li&gt;
        	&lt;li&gt;You cannot transfer balance from one carrier network to another.&lt;/li&gt;
        	&lt;li&gt;The service charge for the balance transfer is free in Namaste.&lt;/li&gt;
            &lt;li&gt;You can only transfer balance up to 20 times a day.&lt;/li&gt;
        	&lt;li&gt;The validity date of receiving mobile is not increased with transfer.&lt;/li&gt;
        &lt;/ul&gt;
    </string>
    <string name="ntc_credit_info">&lt;b&gt;ABOUT NAMASTE CREDIT&lt;/b&gt;
	    &lt;ul&gt;
	    	&lt;li&gt;It is loan service provided by Namaste for it\'s GSM customers.&lt;/li&gt;
	    	&lt;li&gt;The debt is automatically cleared in the next recharge.&lt;/li&gt;
	    	&lt;li&gt;No extra charge is imposed on the credit.&lt;/li&gt;
	    	&lt;li&gt;The credit balance is activated automatically on the low balance to provide uninterruptible calling experience.&lt;/li&gt;
	    	&lt;li&gt;The amount of the credit allocated differs from one customer to another and is made on loyalty based assessment. It means the more you use the Namaste network, the more credit you are allocated.
	    &lt;/ul&gt;
    </string>
    <string name="ntc_fnf_info">&lt;b&gt;ABOUT FRIENDS &amp;amp; FAMILY&lt;/b&gt;
        &lt;ul&gt;
            &lt;li&gt;It is a special service which allows you to make call to 5 different Namaste number in discounted price.&lt;/li&gt;
            &lt;li&gt;The voice tariff is 55 paisa/minute for GSM/CDMA post-paid and 70 paisa/minute for pre-paid subscriber.&lt;/li&gt;
            &lt;li&gt;The service can be enabled for free.&lt;/li&gt;
        &lt;/ul&gt;
    </string>
    <string name="ntc_mca_info">&lt;b&gt;ABOUT MISSED CALL ALERT&lt;/b&gt;
        &lt;ul&gt;
            &lt;li&gt;This service provides you the information about the calls that you were unable to receive.&lt;/li&gt;
            &lt;li&gt;This service can be enabled free of cost and it is auto-renewed as well.&lt;/li&gt;
            &lt;li&gt;Upon successful subscription of the service, you will receive a SMS in the format: &quot;You have a missed call from 984XXXXXXX(no.) at 2021-05-19 01:00:30&quot; where no. represents the total call attempt.&lt;/li&gt;
        &lt;/ul&gt;
    </string>
    <string name="ntc_crbt_info">&lt;b&gt;ABOUT CALLER RING BACK TONE&lt;/b&gt;
        &lt;ul&gt;
            &lt;li&gt;This service replaces the boring standard ringback tone with hit songs and dialogues.&lt;/li&gt;
            &lt;li&gt;Send \"top\" to 1455 to get the top songs crbt code.&lt;li&gt;
            &lt;li&gt;Caller tune subscription charge : Rs. 5 weekly and Rs. 20 monthly&lt;/li&gt;
            &lt;li&gt;Tone charge : Rs. 2.5 weekly and Rs. 10 monthly&lt;/li&gt;
        &lt;/ul&gt;
    </string>
    <string name="tv_transfer_balance_txt">Transfer balance</string>
    <string name="ntc_tiet_security_code_hint">Enter Security Code</string>
    <string name="tiet_recipient_hint">Enter recipient phone no.</string>
    <string name="tiet_selected_recipient">Selected recipient: %s</string>
    <string name="tiet_amount_hint">Enter amount(in Rs.)</string>
    <string name="error_security_code">Please enter valid security code.</string>
    <string name="ntc_error_recipient">Please enter recipient\'s 10 digits NTC phone number.</string>
    <string name="ntc_error_amount">Please enter amount(in Rs.) between 10 and 500.</string>
    <string name="ntc_tv_namaste_credit_txt">Namaste Credit</string>
    <string name="ntc_tv_4g_txt" translatable="false">4G</string>
    <string name="ntc_btn_enable_4g_txt">Enable 4G</string>
    <string name="ntc_btn_dismiss">Dismiss</string>
    <string name="ntc_tv_4g_info">Enable 4G if you haven\'t already to enjoy faster data, better voice calls and many more.</string>
    <string name="ntc_tv_fnf_info"><![CDATA[Friends & Family]]></string>
    <string name="ntc_btn_modify_txt">Modify</string>
    <string name="ntc_btn_delete_txt">Delete</string>
    <string name="ntc_btn_query_txt">Query</string>
    <string name="ntc_modify_old_hint">Old phone no.</string>
    <string name="ntc_modify_new_hint">New phone no.</string>
    <string name="ntc_delete_hint">Phone no. to delete</string>
    <string name="ntc_tv_crbt_info">Caller Ring Back Tone(CRBT)</string>
    <string name="ntc_song_code_hint">Enter song code</string>
    <string name="ntc_til_security_code_helper_txt">Click the save button to save the security code for next use.</string>
    <string name="ncell_transfer_balance_info">"&lt;b&gt;ABOUT BALANCE TRANSFER&lt;/b&gt;        &lt;ul&gt;             &lt;li&gt;You can transfer balance from Rs. 10 up to Rs. 200 only per transfer.&lt;/li&gt;         \t&lt;li&gt;You cannot transfer balance from one carrier network to another.&lt;/li&gt;         \t&lt;li&gt;The service charge for the balance transfer is Rs. 1(excluding taxes) in Ncell.&lt;/li&gt;             &lt;li&gt;You can only transfer balance up to 3 times a day.&lt;/li&gt;         \t&lt;li&gt;The validity date of receiving mobile is not increased with transfer.&lt;/li&gt;         &lt;/ul&gt;     "</string>
    <string name="summary_about">© Chiranjeevi Pandey</string>
    <string name="app_version">1.0</string>
    <string name="title_version">App Version</string>
    <string name="key_send_feedback" translatable="false">feedback</string>
    <string name="summary_support">Click here to send email to developer</string>
    <string name="title_send_feedback">Send feedback</string>
    <string name="preference_cat_title">About</string>
    <string name="tv_loading_txt">Processing</string>
    <string name="btn_cancel_txt">Cancel processing</string>
    <string name="tv_warning_txt">Note: This overlay will close automatically in 10 seconds.</string>
</resources>