<!--
  ~ Created by Chiranjeevi Pandey on 2/23/22, 9:41 AM
  ~ Copyright (c) 2022. Some rights reserved.
  ~ Last modified: 2022/02/22
  ~
  ~ Licensed under GNU General Public License v3.0;
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ https://www.gnu.org/licenses/gpl-3.0.en.html
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:key="@string/key_language"
        app:summaryOff="@string/language_summary_off"
        app:summaryOn="@string/language_summary_on"
        app:title="@string/language_pref_title" />

    <SwitchPreferenceCompat
        app:allowDividerBelow="true"
        app:key="@string/key_vibrate"
        app:summaryOff="@string/vibrate_summary_off"
        app:summaryOn="@string/vibrate_summary_on"
        app:title="@string/vibrate_pref_title" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="@string/key_overlay"
        android:title="@string/overlay_pref_title"
        app:summaryOff="@string/overlay_summary_off"
        app:summaryOn="@string/overlay_summary_on" />

    <PreferenceCategory app:title="@string/preference_cat_title">

        <Preference
            app:summary="@string/app_version"
            app:title="@string/title_version" />

        <Preference
            app:key="@string/key_send_feedback"
            app:summary="@string/summary_support"
            app:title="@string/title_send_feedback" />

        <Preference
            app:selectable="false"
            app:summary="@string/summary_about" />

    </PreferenceCategory>
</PreferenceScreen>