<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Chiranjeevi Pandey on 2/23/22, 9:41 AM
  ~ Copyright (c) 2022. Some rights reserved.
  ~ Last modified: 2021/10/28
  ~
  ~ Licensed under GNU General Public License v3.0;
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ https://www.gnu.org/licenses/gpl-3.0.en.html
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_recharge"
        android:name="com.gbsoft.merosim.ui.recharge.RechargeFragment"
        android:label="@string/menu_recharge"
        tools:layout="@layout/fragment_recharge" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.gbsoft.merosim.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@xml/root_preferences" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.gbsoft.merosim.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_namaste_detail"
        android:name="com.gbsoft.merosim.ui.ntc.NamasteDetailFragment"
        android:label="@string/nav_ntc_detail"
        tools:layout="@layout/fragment_namaste_detail" />

    <fragment
        android:id="@+id/nav_ncell_detail"
        android:name="com.gbsoft.merosim.ui.ncell.NcellDetailFragment"
        android:label="@string/nav_ncell_detail"
        tools:layout="@layout/fragment_ncell_detail" />

    <fragment
        android:id="@+id/nav_smart_detail"
        android:name="com.gbsoft.merosim.ui.smart.SmartDetailFragment"
        android:label="@string/nav_smart_detail"
        tools:layout="@layout/fragment_smart_detail" />

</navigation>