<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Chiranjeevi Pandey on 2/23/22, 9:41 AM
  ~ Copyright (c) 2022. Some rights reserved.
  ~ Last modified: 2021/10/28
  ~
  ~ Licensed under GNU General Public License v3.0;
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ https://www.gnu.org/licenses/gpl-3.0.en.html
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_round_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_recharge"
            android:icon="@drawable/ic_round_document_scanner_24"
            android:title="@string/menu_recharge" />
    </group>
    <group>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_round_settings_24"
            android:title="@string/menu_settings" />
    </group>
</menu>