<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2021 Chiranjeevi Pandey Some rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ Last modified: 2021/05/31
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rdo_btn_ntc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:enabled="false"
            android:text="@string/sim_name_namaste" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rdo_btn_ncell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:enabled="false"
            android:text="@string/sim_name_ncell" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rdo_btn_smartcell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:enabled="false"
            android:text="@string/sim_name_smart" />

    </RadioGroup>
</layout>